fix: iphone toolbar overlap with plugin

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@supports (-webkit-touch-callout: none) {
-  .h-screen {
-    height: -webkit-fill-available;
-  }
-}
